--- a/GUI/CssPackage/mainCss.css
+++ b/GUI/CssPackage/mainCss.css
@@ -7,9 +7,9 @@ and open the template in the editor.
     Created on : Dec 16, 2013, 3:06:09 PM
     Author     : Max
 */
-
-.root {
+.main{
      -fx-background-image: url("background.jpg");
+   
 }
 .label {
     -fx-font-size: 12px;
@@ -17,6 +17,7 @@ and open the template in the editor.
     -fx-text-fill: #333333;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
+
 #welcome-text {
    -fx-font-size: 32px;
    -fx-font-family: "Arial Black";
