--- a/GUI/negevsatgui/FXMLDocument.fxml
+++ b/GUI/negevsatgui/FXMLDocument.fxml
@@ -17,36 +17,40 @@
       </ImageView>
       <Group fx:id="groupPayload" layoutX="-290.0" layoutY="28.0">
          <children>
-            <ImageView fx:id="ImageViewPayload" fitHeight="39.0" fitWidth="70.0" layoutX="431.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="LabelPayload" layoutX="437.0" layoutY="218.0" text="Payload" />
+            <ImageView fx:id="ImageViewPayload" fitHeight="39.0" fitWidth="69.0" layoutX="448.0" layoutY="207.0" pickOnBounds="true" />
+            <Label fx:id="LabelPayload" layoutX="452.0" layoutY="218.0" prefHeight="17.0" prefWidth="51.0" text="Payload" />
          </children>
       </Group>
       <Group fx:id="groupPayload1" layoutX="-115.0" layoutY="116.0" />
       <Group fx:id="groupSP" layoutX="-392.0" layoutY="20.0">
          <children>
-            <ImageView fx:id="ImageViewSP" fitHeight="39.0" fitWidth="70.0" layoutX="431.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="labelSP" layoutX="437.0" layoutY="218.0" text="Supply Power" />
+            <ImageView fx:id="ImageViewSP" fitHeight="39.0" fitWidth="91.0" layoutX="431.0" layoutY="207.0" pickOnBounds="true" />
+            <Label fx:id="labelSP" layoutX="437.0" layoutY="218.0" text="Solar Panels" />
          </children>
       </Group>
-      <Group fx:id="groupPDU" layoutX="-223.0" layoutY="-182.0">
+      <Group fx:id="groupPDU" layoutX="-137.0" layoutY="-182.0">
          <children>
-            <ImageView fx:id="ImageViewPDU" fitHeight="39.0" fitWidth="54.0" layoutX="407.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="labelPDU" layoutX="420.0" layoutY="224.0" prefHeight="17.0" prefWidth="29.0" text="PDU" />
+            <ImageView fx:id="ImageViewPDU" fitHeight="39.0" fitWidth="60.0" layoutX="407.0" layoutY="213.0" pickOnBounds="true" />
+            <Label fx:id="labelPDU" layoutX="420.0" layoutY="224.0" prefHeight="17.0" prefWidth="49.0" text="Thermal" />
          </children>
       </Group>
-      <Group fx:id="groupRadio" layoutX="-327.0" layoutY="-176.0">
+      <Group fx:id="groupRadio" layoutX="-267.0" layoutY="-176.0">
          <children>
-            <ImageView fx:id="ImageViewRadio" fitHeight="39.0" fitWidth="54.0" layoutX="431.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="labelRadio" layoutX="437.0" layoutY="218.0" prefHeight="17.0" prefWidth="47.0" text="Radio" />
+            <ImageView fx:id="ImageViewRadio" fitHeight="39.0" fitWidth="84.0" layoutX="431.0" layoutY="207.0" pickOnBounds="true" />
+            <Label fx:id="labelRadio" layoutX="437.0" layoutY="218.0" prefHeight="17.0" prefWidth="78.0" text="Temperature" />
          </children>
       </Group>
       <Group fx:id="groupBattery" layoutX="-410.0" layoutY="-176.0">
          <children>
-            <ImageView fx:id="ImageViewBattery" fitHeight="39.0" fitWidth="41.0" layoutX="441.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="labelBattery" layoutX="447.0" layoutY="218.0" prefHeight="17.0" prefWidth="48.0" text="Battery" />
+            <ImageView fx:id="ImageViewBattery" fitHeight="39.0" fitWidth="57.0" layoutX="441.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="labelBattery" layoutX="447.0" layoutY="218.0" prefHeight="17.0" prefWidth="48.0" text="Energy" />
          </children>
       </Group>
-      <Label fx:id="labelComputer" layoutX="278.0" layoutY="246.0" text="Computer" />
-      <ImageView fx:id="ImageViewComputer" fitHeight="39.0" fitWidth="70.0" layoutX="270.0" layoutY="235.0" pickOnBounds="true" preserveRatio="true" />
+      <Group>
+         <children>
+            <ImageView fx:id="ImageViewComputer" fitHeight="39.0" fitWidth="80.0" layoutX="270.0" layoutY="235.0" pickOnBounds="true" />
+            <Label fx:id="labelComputer" layoutX="278.0" layoutY="246.0" prefHeight="17.0" prefWidth="47.0" text="S Band" />
+         </children>
+      </Group>
    </children>
 </Pane>
